fixed module control buttons alignment issue

--- a/src/Kanbas/Courses/Modules/index.css
+++ b/src/Kanbas/Courses/Modules/index.css
@@ -64,3 +64,7 @@
 .modules-name-text {
   color: #c70909;
 }
+
+.module-control-buttons {
+  
+}
